6999491: non-zero COOPs are used when they should not

HeapBaseMinAddress should be used only for a default heap size calculation.

Reviewed-by: iveresov, jcoomes, dholmes